fixed issue with scrollbar on resizing the window

--- a/style/projects.css
+++ b/style/projects.css
@@ -14,7 +14,7 @@
 
 #projects-page {
   width: 100vw;
-  height: 90vw;
+  height: 85vw;
   color: var(--txtgrey);
   background-image: linear-gradient(
     to bottom,
